chore: cleanup, readme, deploy all to central